--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "from src import *\n",
     "\n",
-    "from myutils import email_notify"
+    "# pip install email_notify\n",
+    "import email_notify"
    ]
   },
   {
@@ -53,9 +54,9 @@
     "samples = 50\n",
     "repeat = 200\n",
     "\n",
-    "interval = 1/sampling_rate #s\n",
-    "exposure_time = 500e-6 #s, 500 us\n",
-    "timeout_milisec = int(1.5*samples*interval*1e3) #ms\n",
+    "interval = 1/sampling_rate # s\n",
+    "exposure_time = 500e-6 # s, 500us\n",
+    "timeout_milisec = int(1.5*samples*interval*1e3) # ms\n",
     "\n",
     "measurement = 'DI'"
    ]
@@ -66,10 +67,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "############\n",
-    "# Freq Est #\n",
-    "############\n",
-    "\n",
     "def task(dcam: EasyDcam, alp: EasyALP4, ground_truth, led: RaspiLED=None, pwm_duty=0):\n",
     "    print(f'Current sensor temperature is {dcam.ez_temperature()}')\n",
     "    if dcam.ez_temperature() >= -30:\n",
@@ -79,7 +76,7 @@
     "        led.turn_on(int(pwm_duty))\n",
     "\n",
     "    ground_truth = np.round(ground_truth, 5)\n",
-    "    pic_time = int(1 / (sampling_rate * ground_truth) / 2 * 1e6) #us\n",
+    "    pic_time = int(1 / (sampling_rate * ground_truth) / 2 * 1e6) # us\n",
     "\n",
     "    alp.ez_load_seq([alp.ez_single_pixel(0), alp.ez_single_pixel(A)], pic_time)\n",
     "    dcam.ez_exposure_time(exposure_time)\n",
@@ -126,7 +123,7 @@
     "\n",
     "\n",
     "\n",
-    "@email_notify('hcnzj@qq.com')\n",
+    "@email_notify.decorator('hcnzj@qq.com')\n",
     "def main():\n",
     "    if pwm_duty is None:\n",
     "        with EasyDcam() as dcam, EasyALP4() as alp:\n",
@@ -170,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
