demo for basic usages

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -28,11 +28,11 @@
     "# Use LoadEstimates to load a saved Estimates instance from a file\n",
     "# The loaded Estimates instance contains various data stored as attributes\n",
     "# When printed, it shows the stored data\n",
-    "c = LoadEstimates('data\\ideal\\di_3px_f0.14_d0.npz')\n",
+    "c = LoadEstimates('data/ideal/di_3px_f0.14_d0.npz')\n",
     "\n",
     "\n",
     "# The data in this repository is already processed\n",
-    "# You can use the est() method to perform estimation, the method is defined in src\\estimator.py\n",
+    "# You can use the est() method to perform estimation, the method is defined in src/estimator.py\n",
     "c.est() # Perform estimation using the loaded data\n",
     "\n",
     "plt.plot(c.time_domain[0])\n",
