--- a/main.ipynb
+++ b/main.ipynb
@@ -37,10 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "############\n",
-    "# Freq Est #\n",
-    "############\n",
-    "\n",
     "sampling_rate = 20 #Hz\n",
     "\n",
     "# freq_list = np.linspace(0.1, 0.4, 61)\n",
@@ -48,7 +44,6 @@
     "\n",
     "freq_list = [0.2]\n",
     "pwm_duty = np.arange(0, 101, 2).astype(int)\n",
-    "# pwm_duty = [1,3,5,7,9]\n",
     "\n",
     "A = 5\n",
     "samples = 50\n",
@@ -141,6 +136,30 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for m in ('SPADE', 'DI'):\n",
+    "#     for a in (3, 5):\n",
+    "#         for f in np.linspace(0.1, 0.4, 61):\n",
+    "#             f = np.round(f, 5)\n",
+    "#             meta = MetaData(m, f, DMD.A(a), 0)\n",
+    "#             c = NewEstimates(f'raw/ideal/{m.lower()}_{a}px/{m.lower()}_{a}px_f{f}_d0_raw.npy', meta)\n",
+    "#             c.est()\n",
+    "#             c.savez('TEMP/ideal')\n",
+    "\n",
+    "\n",
+    "# for m in ('SPADE', 'DI'):\n",
+    "#     for d in np.arange(0, 101, 2).astype(int):\n",
+    "#         meta = MetaData(m, 0.2, DMD.A(5), d)\n",
+    "#         c = NewEstimates(f'raw/noisy/{m.lower()}_5px/{m.lower()}_5px_f0.2_d{d}_raw.npy', meta)\n",
+    "#         c.est()\n",
+    "#         c.savez('TEMP/noisy')\n"
    ]
   },
   {
